--- a/package.json
+++ b/package.json
@@ -19,11 +19,18 @@
     "@angular/platform-browser": "~7.2.0",
     "@angular/platform-browser-dynamic": "~7.2.0",
     "@angular/router": "~7.2.0",
+    "bcrypt": "^3.0.6",
+    "body-parser": "^1.18.3",
     "bootstrap": "^4.3.1",
     "bootstrap-less-port": "^1.0.0",
     "core-js": "^2.5.4",
+    "cors": "^2.8.5",
     "d3": "^5.9.2",
-    "jquery": "^3.3.1",
+    "express": "^4.16.4",
+    "express-session": "^1.16.1",
+    "firebase": "^5.11.0",
+    "firebase-admin": "^7.3.0",
+    "jquery": "^3.4.0",
     "less": "^2.7.3",
     "popper.js": "^1.15.0",
     "rxjs": "~6.3.3",
