Added few changes to the File Upload functinality.

--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "firebase-admin": "^7.3.0",
     "jquery": "^3.4.0",
     "less": "^2.7.3",
+    "os": "^0.1.1",
     "popper.js": "^1.15.0",
     "rxjs": "~6.3.3",
     "rxjs-compat": "^6.0.0",
@@ -46,7 +47,7 @@
     "@types/d3": "^5.7.2",
     "@types/jasmine": "~2.8.8",
     "@types/jasminewd2": "~2.0.3",
-    "@types/node": "~8.9.4",
+    "@types/node": "^8.9.5",
     "codelyzer": "~4.5.0",
     "jasmine-core": "~2.99.1",
     "jasmine-spec-reporter": "~4.2.1",
