Audio functionality fixed.

--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@angular/platform-browser": "~7.2.0",
     "@angular/platform-browser-dynamic": "~7.2.0",
     "@angular/router": "~7.2.0",
+    "@google-cloud/storage": "^2.5.0",
     "bcrypt": "^3.0.6",
     "body-parser": "^1.18.3",
     "bootstrap": "^4.3.1",
@@ -26,10 +27,12 @@
     "core-js": "^2.5.4",
     "cors": "^2.8.5",
     "d3": "^5.9.2",
+    "duplexify": "^4.0.0",
     "express": "^4.16.4",
     "express-session": "^1.16.1",
-    "firebase": "^5.11.0",
+    "firebase": "^5.11.1",
     "firebase-admin": "^7.3.0",
+    "fs": "0.0.1-security",
     "jquery": "^3.4.0",
     "less": "^2.7.3",
     "os": "^0.1.1",
