--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e",
-    "heroku-postbuild": "ng build --prod"
+    "build": "ng build --prod"
   },
   "engines": {
     "node": "10.14.1",
