--- a/package.json
+++ b/package.json
@@ -16,8 +16,10 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "~7.2.0",
+    "@angular/cli": "~7.3.7",
     "@angular/common": "~7.2.0",
     "@angular/compiler": "~7.2.0",
+    "@angular/compiler-cli": "~7.2.0",
     "@angular/core": "~7.2.0",
     "@angular/fire": "^5.1.3",
     "@angular/forms": "~7.2.0",
@@ -46,10 +48,8 @@
     "rxjs": "~6.3.3",
     "rxjs-compat": "^6.0.0",
     "tslib": "^1.9.0",
-    "zone.js": "~0.8.26",
     "typescript": "~3.2.2",
-    "@angular/cli": "~7.3.7",
-    "@angular/compiler-cli": "~7.2.0"
+    "zone.js": "~0.8.26"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.13.0",
