--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "fs": "0.0.1-security",
     "jquery": "^3.4.0",
     "less": "^2.7.3",
+    "ngx-cookie-service": "^2.2.0",
     "os": "^0.1.1",
     "popper.js": "^1.15.0",
     "rxjs": "~6.3.3",
