--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "core-js": "^2.5.4",
     "cors": "^2.8.5",
     "crypto": "^1.0.1",
+    "crypto-js": "^3.1.9-1",
     "d3": "^5.9.2",
     "duplexify": "^4.0.0",
     "express": "^4.16.4",
