--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "body-parser": "^1.18.3",
     "bootstrap": "^4.3.1",
     "bootstrap-less-port": "^1.0.0",
+    "copy-to-clipboard": "^3.2.0",
     "core-js": "^2.5.4",
     "cors": "^2.8.5",
     "crypto": "^1.0.1",
