--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@angular/core": "~7.2.0",
     "@angular/fire": "^5.1.3",
     "@angular/forms": "~7.2.0",
+    "@angular/http": "^7.2.15",
     "@angular/platform-browser": "~7.2.0",
     "@angular/platform-browser-dynamic": "~7.2.0",
     "@angular/router": "~7.2.0",
@@ -45,6 +46,7 @@
     "fs": "0.0.1-security",
     "jquery": "^3.4.0",
     "less": "^2.7.3",
+    "ng-push": "^0.2.2",
     "ngx-cookie-service": "^2.2.0",
     "os": "^0.1.1",
     "popper.js": "^1.15.0",
@@ -52,6 +54,7 @@
     "rxjs-compat": "^6.0.0",
     "tslib": "^1.9.0",
     "typescript": "~3.2.2",
+    "web-animations-js": "^2.3.2",
     "zone.js": "~0.8.26"
   },
   "devDependencies": {
