--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e",
-    "heroku-postbuild": "ng build --prod --aot"
+    "heroku-postbuild": "ng build --prod --aot",
+    "gcp-build": "ng build --prod --aot"
   },
   "engines": {
     "node": "^10.0.0",
@@ -27,6 +28,7 @@
     "@angular/platform-browser": "~7.2.0",
     "@angular/platform-browser-dynamic": "~7.2.0",
     "@angular/router": "~7.2.0",
+    "@auth0/angular-jwt": "^4.0.0",
     "@google-cloud/storage": "^2.5.0",
     "ajv-keywords": "^3.4.1",
     "bcrypt": "^3.0.6",
@@ -46,6 +48,7 @@
     "firebase-admin": "^7.3.0",
     "fs": "0.0.1-security",
     "jquery": "^3.4.0",
+    "jsonwebtoken": "^8.5.1",
     "less": "^2.7.3",
     "localStorage": "^1.0.4",
     "ng-push": "^0.2.2",
