--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "ngx-cookie-service": "^2.2.0",
     "os": "^0.1.1",
     "popper.js": "^1.15.0",
+    "redis": "^3.0.2",
     "rxjs": "~6.3.3",
     "rxjs-compat": "^6.0.0",
     "tslib": "^1.9.0",
