--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "os": "^0.1.1",
     "popper.js": "^1.15.0",
     "redis": "^3.0.2",
+    "redis-parser": "^3.0.0",
     "rxjs": "~6.3.3",
     "rxjs-compat": "^6.0.0",
     "tslib": "^1.9.0",
